--- a/aboutMe.yml
+++ b/aboutMe.yml
@@ -1,7 +1,7 @@
-name: Ben Doherty
-studentNumber: z1234567/Monday/Tuesday
-gitHubUsername: notionparallax
+name: Juni Herdal
+studentNumber: z5197821/Monday/Tuesday
+gitHubUsername: junieurora
 stackoverflow: http://stackoverflow.com/users/1835727/ben
-unswEmail: noIdea@unsw.edu.au/name@company.com.au
-realEmailFirstBit: ben  # this avoids spam
-realEmailOtherBit: @notionparallax.co.uk
+unswEmail: z5197821@unsw.edu.au
+realEmailFirstBit: juniherdal# this avoids spam
+realEmailOtherBit: @gmail.com
